# Forevr

./: README.md
agent-observe/: .gitignore  README.md  pyproject.toml
agent-observe/agent/: agent.py  langgraph_agent.py
agent-observe/backend/: analyzer.py  database.py  main.py  requirements.txt  storage.py  tracer.py
agent-observe/forevr/: __init__.py  _client.py  _tracer.py  config.py  crewai.py  langchain.py  openai_agents.py  universal.py
agent-observe/frontend/: index.html
agent-observe/integrations/: __init__.py  crewai_integration.py  langchain_integration.py  openai_agents_integration.py  universal.py
agent-observe/traceai/: README.md  __init__.py  _client.py  _tracer.py  config.py  crewai.py  langchain.py  openai_agents.py  pyproject.toml  universal.py
