[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forevr"
version = "0.1.0"
description = "Observability SDK for AI agents — auto-traces LangChain, CrewAI, OpenAI Agents, and any custom agent."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Trace AI", email = "mayankdindor229@gmail.com" }
]
keywords = ["ai", "agents", "observability", "tracing", "langchain", "crewai", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Only `requests` is truly required — framework packages are optional
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
crewai    = ["crewai>=0.1.0"]
openai    = ["openai-agents>=0.1.0"]
all       = ["langchain-core>=0.1.0", "crewai>=0.1.0"]

[project.urls]
Homepage   = "https://github.com/traceai-dev/traceai"
Repository = "https://github.com/traceai-dev/traceai"

[tool.setuptools.packages.find]
where = ["."]
include = ["traceai*"]

[tool.setuptools.package-data]
traceai = ["py.typed"]
